# Zelda_II

./: .gitignore  README.md  README.txt
CS454/: cpp.hint
CS454/CS454/: CMakeLists.txt  CMakePresets.json
CS454/CS454/Config/: config.json
CS454/CS454/Engine/: CMakeLists.txt
CS454/CS454/Engine/Assets/: map1_Kachelebene 1.csv
CS454/CS454/Engine/Include/: AnimationFilm.h  AnimationFilmHolder.h  AnimationFilms.h  App.h  BitmapLoader.h  CircularBackground.h  ComputeGrid.h  Editor.h  EngineDefines.h  Grid.h  GridCompute.h  GridCompute2.h  GridLayer.h  GridMotion.h  MapEditor.h  SystemClock.h  TileLayer.h  ViewWindow.h  ZeldaApp.h
CS454/CS454/Engine/Include/Animations/: Animation.h  FlashAnimation.h  FrameListAnimation.h  FrameRangeAnimation.h  MovingAnimation.h  MovingPathAnimation.h  ScrollAnimation.h  TickAnimation.h
CS454/CS454/Engine/Include/Animators/: Animator.h  AnimatorManager.h  FrameRangeAnimator.h  MovingAnimator.h  MovingPathAnimator.h  ScrollingAnimator.h  TickAnimator.h
CS454/CS454/Engine/Include/GameLoopFuncs/: Input.h
CS454/CS454/Engine/Include/Grid/: Grid.h  GridCompute.h  GridCompute2.h  GridLayer.h  GridMotion.h
CS454/CS454/Engine/Include/KeyFrameAnimation/: AnimationFilm.h  AnimationFilmHolder.h  BitmapLoader.h  FilmParser.h
CS454/CS454/Engine/Include/Sprites/: BoundingArea.h  Clipper.h  CollisionChecker.h  CombatSystem.h  DestructionManager.h  GravityHandler.h  MotionQuantizer.h  Sprite.h  SpriteHelpers.h  SpriteManager.h
CS454/CS454/Engine/Include/Util/: ConfigFuncs.h  Config_Factory.h  Configurator.h  ConfiguratorManager.h  DestructionManager.h  EngineDefines.h  ParseFuncs.h  Print.h  SystemClock.h
CS454/CS454/Engine/Src/: AnimationFilmHolder.cpp  ConfigFuncs.cpp  Editor.cpp  FilmParser.cpp  GameLoop.cpp  Grid.cpp  GridCompute.cpp  GridCompute1.cpp  GridCompute2.cpp  GridMotion.cpp  GridUtil.cpp  Input.cpp  MapEditor.cpp  Parsefuncs.cpp  ParsingFunction.cpp  TileLayer.cpp  ViewWindow.cpp  ZeldaApp.cpp  main.cpp
CS454/CS454/Engine/Src/Animators/: Animator.cpp  AnimatorManager.cpp  FrameRangeAnimator.cpp  MovingAnimator.cpp  MovingPathAnimator.cpp  ScrollAnimator.cpp
CS454/CS454/Engine/Src/DestructionManager/: DestructionManager.cpp
CS454/CS454/Engine/Src/Sprites/: Clipper.cpp  CollisionChecker.cpp  GravityHandler.cpp  MotionQuantizer.cpp  Sprite.cpp  SpriteHelpers.cpp
CS454/CS454/Engine/Src/SystemClock/: SystemClock.cpp
CS454/CS454/UnitTests/UnitTest1/: CMakeLists.txt
CS454/CS454/UnitTests/UnitTest1/Src/: GameLoop.cpp  MapEditor.cpp  UnitTest1App.cpp  ViewWindow.cpp  main.cpp
CS454/CS454/UnitTests/UnitTest1/UnitTest1Media/: grass_biome.tsx  map1_Kachelebene_1.csv  map1_Tile Layer 2.csv
CS454/CS454/UnitTests/UnitTest1/conf/: config.json
CS454/CS454/UnitTests/UnitTest2/: CMakeLists.txt
CS454/CS454/UnitTests/UnitTest2/Src/: GridCompute.cpp  GridCompute1.cpp  GridCompute2.cpp  GridMotion.cpp  GridUtil.cpp  TileLayer.cpp  UnitTest2App.cpp
CS454/CS454/UnitTests/UnitTest2/UnitTest2Media/: Kachelebene.tmx  Kachelebene_Kachelebene_layer1.csv  Kachelebene_Kachelebene_layer2.csv  grass_biome.tsx  map1_Kachelebene 1.csv
CS454/CS454/UnitTests/UnitTest2/UnitTest2Media/Zelda/: TileMap.tmx
CS454/CS454/UnitTests/UnitTest2/conf/: config.json
CS454/CS454/UnitTests/UnitTest3/: CMakeLists.txt
CS454/CS454/UnitTests/UnitTest3/Config/: animation_data.json  config.txt  data.json
CS454/CS454/UnitTests/UnitTest3/Include/: Animation_testing.h  CreateSprite.h  initAnimationsSprites.h
CS454/CS454/UnitTests/UnitTest3/Include/AI/: AI.h
CS454/CS454/UnitTests/UnitTest3/Include/Characters/: Character.h  CharacterManager.h  Guma.h  Mazura.h  PalaceBot.h  Staflos.h  Wosu.h
CS454/CS454/UnitTests/UnitTest3/Include/Link/: Link.h
CS454/CS454/UnitTests/UnitTest3/Include/SoundManager/: SoundManager.h
CS454/CS454/UnitTests/UnitTest3/Include/SpriteHandling/: SpriteHandlers.h
CS454/CS454/UnitTests/UnitTest3/Include/StatPrinting/: StatPrinting.h
CS454/CS454/UnitTests/UnitTest3/Src/: AnimationFilmHolder.cpp  Animation_testing.cpp  CreateSprite.cpp  FilmParser.cpp  GameLoopFunctions.cpp  GridLayer.cpp  InitGuma.cpp  InitPalacebot.cpp  InitWosu.cpp  Initialise_characters.cpp  Initialise_characters.h  MotionQuantizer.cpp  SpriteManager.cpp  SystemClock.cpp  TileLayer.cpp  UnitTest3App.cpp  initAnimationsSprites.cpp
CS454/CS454/UnitTests/UnitTest3/Src/AI/: AI.cpp
CS454/CS454/UnitTests/UnitTest3/Src/AnimatorSrc/: Animator.cpp  FrameRangeAnimator.cpp  MovingAnimator.cpp  MovingPathAnimator.cpp  ScrollingAnimator.cpp  TickAnimator.cpp
CS454/CS454/UnitTests/UnitTest3/Src/Characters/: Character.cpp  initCharacters.cpp
CS454/CS454/UnitTests/UnitTest3/Src/GameLoopFuncs/: Clipper.cpp  Input.cpp
CS454/CS454/UnitTests/UnitTest3/Src/Link_test/: Enemytest.h  GameCharacters.cpp  GameCharacters.h  GreatPalaceBot.h  Guma.h  Link.h  Wosu.h
CS454/CS454/UnitTests/UnitTest3/Src/Recycler/: Recycler.h
CS454/CS454/UnitTests/UnitTest3/Src/SoundManager/: SoundManager.cpp
CS454/CS454/UnitTests/UnitTest3/Src/SpriteHandling/: SpriteHandlers.cpp
CS454/CS454/UnitTests/UnitTest3/Src/Sprites/: CollisionChecker.cpp  CombatSystem.cpp  GravityHandler.cpp  MotionQuantizer.cpp  Sprite.cpp
CS454/CS454/UnitTests/UnitTest3/Src/StatPrinting/: StatPrinting.cpp
CS454/CS454/UnitTests/UnitTest3/Src/init_sprites/: init_bot.cpp  init_doors.cpp  init_elevators.cpp  init_guma.cpp  init_link.cpp  init_mazura.cpp  init_staflos.cpp  init_wosu.cpp
CS454/CS454/UnitTests/UnitTest3/UnitTest3Media/: Entrance._BackroundEntrance.csv  Entrance._ForegroundEntrance.csv  Palace-Tileset.tsx  TileMap.tmx  TileMap_Backround.csv  TileMap_Foreground.csv  TileMap_Horizon.csv  Zeldatileset.tsx  map1.tmx  map1_Kachelebene 1.csv  zeldatest.tmx  zeldatest_Tile ActionLayer.csv  zeldatest_Tile BgLayer.csv
CS454/CS454/UnitTests/UnitTest3/conf/: config.json
hy454/: CS454-Project2022.docx
hy454/CS454/CS454/Engine/: CMakeLists.txt
hy454/CS454/CS454/Engine/include/: App.h  Editor.h  ZeldaApp.h
hy454/CS454/CS454/Engine/src/: Editor.cpp  GameLoop.cpp  ParsingFunction.cpp  ZeldaApp.cpp  main.cpp
(+47 files in other folders)
